--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@ Society Club SECTION  -->
         </p>
 
           <div class= "welcome-buttons-section">
-              <a href="https://forms.gle/BcpiySQgNX99UMxHA" class="welcome-button-join" target="_blank" rel="noreferrer noopener">Join The Society</a>
+              <a href="https://drive.google.com/drive/u/0/folders/12YvrtwVNbcLI7BGLo-HONe00FsKJJOJQ" class="welcome-button-join" target="_blank" rel="noreferrer noopener">Third semester Notes</a>
           </div>
 
           <!-- <a href="https://github.com/pradipbhatt"><i class="fab fa-github fa-lg desc" aria-hidden="true" style="color: black; padding-top: 20px;"></i></a> -->
@@ -367,7 +367,7 @@ Society Club SECTION  -->
       </div>
   
       <div class="about-img-section">
-        <img src="images/teamwork41.gif" alt="" class="about-img">
+        <img src="notes/images/parry8.png" alt="" class="about-img">
       </div>
   </div>
   <!-- end of about section  -->
@@ -378,7 +378,7 @@ Society Club SECTION  -->
   <!-- events section -->
   <div class="events-flex-container" >
       <div class="events-img-section">
-          <img src="notes/images/suisters.JPG" alt="" class="events-img">
+          <img src="notes/images/parry9.png" alt="" class="events-img">
       </div>
 
       <div class="events-main-content">
@@ -410,7 +410,7 @@ Society Club SECTION  -->
       </div>
 
       <div class="resources-img-section">
-          <img src="images/resource.png" alt="" class="resources-img">
+          <img src="notes/images/parry4.png" alt="" class="resources-img">
       </div>
   </div>
   <!-- end of resources section  -->
@@ -418,7 +418,7 @@ Society Club SECTION  -->
   <!-- Collaborate Secion -->
   <div class="collaborate-flex-container" >
       <div class="collaborate-img-section">
-          <img src="notes/images/IMG_4812.JPG" alt="" class="collaborate-img">
+          <img src="notes/images/parry11.png" alt="" class="collaborate-img">
       </div>
 
       <div class="collaborate-main-content">
