--- a/notes/3semister.html
+++ b/notes/3semister.html
@@ -47,13 +47,13 @@
                         
                     </div>
                     <p> No matter the programming language, every programmer must learn data structures and algorithms (DSA). Our DSA tutorial will guide you to learn all the major ...</p>
-                    <a class="btn mt-4 mb-6 mb-md-0" href="https://ajar-parsnip-154.notion.site/DSA-Notes-72dbc67e035f46ce9cd4b9c6b79dc302">DSA Avishek sir Notes</a>
-                    <a class="btn mt-4 mb-6 mb-md-0" href="https://ajar-parsnip-154.notion.site/DSA-Notes-72dbc67e035f46ce9cd4b9c6b79dc302">Google classroom Notes</a>
+                    <a class="btn mt-4 mb-6 mb-md-0" href="https://drive.google.com/drive/u/0/folders/12YvrtwVNbcLI7BGLo-HONe00FsKJJOJQ">Third semester</a>
+                    <!-- <a class="btn mt-4 mb-6 mb-md-0" href="https://ajar-parsnip-154.notion.site/DSA-Notes-72dbc67e035f46ce9cd4b9c6b79dc302">Google classroom Notes</a>
                     <a class="btn mt-4 mb-6 mb-md-0" href="https://github.com/farwest-university">Assignment in DSA Github</a>
                     <a class="btn mt-4 mb-6 mb-md-0" href="https://drive.google.com/drive/folders/1yBtVorJt3-i1_-8XW4TFXacc41Lw4W46?usp=sharing">Text Book </a>
                     <a class="btn mt-4 mb-6 mb-md-0" href="https://drive.google.com/drive/folders/1kQ4F4DkckliJUMu8DjvY6E71HAcjtkOi?usp=sharing">Hand Written Notes</a>
                     <a class="btn mt-4 mb-6 mb-md-0" href="https://drive.google.com/file/d/1HBtxKWOrXoms7QMfh68qB2pUonbM71bP/view?usp=sharing">Quizes
-                    </a>
+                    </a> -->
                     
 
                 </div>
