--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@ Society Club SECTION  -->
 </div>
 </footer>
 </div>
-<!-- end of footer -->
+<!-- end of footer i had make a changes here -->
  
 <!-- JS -->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
